force-app/main/default/objects/monthly_income__c/monthly_income__c.object-meta.xml
<CustomObject>
    <label>monthly income</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>monthly income Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>monthly incomes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>