force-app/main/default/objects/monthly_income__c/fields/basic_income__c.field-meta.xml
<CustomField>
    <fullName>basic_income__c</fullName>
    <label>basic income</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>