force-app/main/default/objects/monthly_income__c/fields/house_rent_allowance__c.field-meta.xml
<CustomField>
    <fullName>house_rent_allowance__c</fullName>
    <label>house rent allowance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>