force-app/main/default/objects/monthly_income__c/fields/meal_allowance__c.field-meta.xml
<CustomField>
    <fullName>meal_allowance__c</fullName>
    <label>meal allowance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>