force-app/main/default/objects/monthly_income__c/fields/Med_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Med_Insurance__c</fullName>
    <label>Med Insurance</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>