force-app/main/default/objects/monthly_income__c/fields/monthly_gross__c.field-meta.xml
<CustomField>
    <fullName>monthly_gross__c</fullName>
    <formula>taxable_income__c  +  non_taxable_allowance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>monthly gross</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>