force-app/main/default/objects/monthly_income__c/fields/non_taxable_allowance__c.field-meta.xml
<CustomField>
    <fullName>non_taxable_allowance__c</fullName>
    <formula>house_rent_allowance__c +  meal_allowance__c +  provident_fund__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>non taxable allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>