force-app/main/default/objects/monthly_income__c/fields/paydate__c.field-meta.xml
<CustomField>
    <fullName>paydate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>pay date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>