force-app/main/default/objects/monthly_income__c/fields/provident_fund__c.field-meta.xml
<CustomField>
    <fullName>provident_fund__c</fullName>
    <label>provident fund</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>