force-app/main/default/objects/monthly_income__c/fields/taxable_income__c.field-meta.xml
<CustomField>
    <fullName>taxable_income__c</fullName>
    <formula>basic_income__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>taxable income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>