force-app/main/default/objects/monthly_income__c/fields/year__c.field-meta.xml
<CustomField>
    <fullName>year__c</fullName>
    <label>year</label>
    <referenceTo>yearly_income__c</referenceTo>
    <relationshipLabel>monthly incomes</relationshipLabel>
    <relationshipName>monthly_incomes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>